# minecraft-agent

./: .gitignore  CLAUDE.md  DECISION_LOG.md  FEASIBILITY_REPORT.md  README.md  TECHNICAL_BLUEPRINT.md  TODO.md
body/: eslint.config.js  package-lock.json  package.json
body/src/: app.js  app.test.js  bot.js  bot.test.js  server.js
brain/: pyproject.toml
brain/src/: __init__.py
docs/: AGENT_STATE.md  DECISION_LOG.md  PHASE1_HTTP_BRIDGE.md  PRIOR_ART_REPORT.md  PROGRESSION_PLAN.md  TECHNICAL_BLUEPRINT.md  TODO.md
sops/: .gitkeep
