[project]
name = "minecraft-brain"
version = "0.1.0"
description = "LLM-powered planning and orchestration for Minecraft agent"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
